Fix some errors, seperate font rendering into its own file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.22)
 project(ConwaysGameOfLife LANGUAGES C)
 
-add_executable(${PROJECT_NAME} main.c)
+add_executable(${PROJECT_NAME} main.c font.c)
 
 find_package(SDL3 REQUIRED)
 target_link_libraries(${PROJECT_NAME} SDL3)
